--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
                 <button type='button' onclick="location.href='https://github.com/kookmin-sw/capstone-2023-07'">GitHub</button>
             </div>
         </div>
-        <div class="githubpage-body">
-
+        <div class="githubpage-container">
+            <div class="container-title">◆ 프로젝트 소개</div>
+            <div class="container-body">‘Pink Bean’은 ‘메이플스토리’의 종합 검색 플랫폼으로, 캐릭터의 전적 검색, 아이템 기댓값, 각종 컨텐츠 공략, 기타 편의를 제공하고 있습니다. <br><br>
+                메이플스토리란 게임은 유저에게 제공하는 정보가 상당히 불친절한 게임입니다. 때문에 유저들은 현재 자신의 캐릭터가 어느 정도 성능에 위치하는지, 지금 캐릭터 성능으로 어떤 컨텐츠를 즐길 수 있는지 알 수 없으며, 이런 정보의 불친절함에서 유저들끼리의 분쟁이 빈번히 발생합니다.</div>
+            <div class="container-body">유저의 성능이 과거보다 현재가 더 안좋을지라도, 유저들이 확인할 수 있는 정보는 오직 과거의 정보만 확인할 수 있습니다. 또한, 서로 다른 46개 캐릭터별로 능력치의 편차가 심해 비교가 거의 불가능에 가깝습니다.</div>
+            <div class="container-body">때문에 저희는 현재 캐릭터의 성능을 확인할 수 있는 지표를 만들어 유저들의 분쟁을 줄이고, 나아가 이런 정보 및 공략을 담을 수 있는 사이트를 만들고자 합니다.</div>
+            <div class="container-title">◆ 주요 기능</div>
+            <div class="container-body"></div>
+            <div class="container-title">◆ 팀원 소개</div>
+            <div class="container-body">
+                <div>팀장: 김범준(2019****) |  팀장 및 전반적인 개발</div>
+                <div>팀원: 조인영(2020****) |  기획 및 디자인</div>
+            </div>
+            <div class="container-body"></div>
         </div>
     </body>
 </html>
